--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Yantramanav:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Righteous&display=swap');
 
 *{
   font-family:'Yantramanav', sans-serif;
+  margin: 0;
+  padding: 0;
 }
+
 
 
 .headers{
@@ -14,6 +18,7 @@
 .headers h1{
   font-family: 'Righteous', cursive;
   font-size: 4vw;
+  color: rgb(231, 36, 44);
 }
 
 .banner{
@@ -33,6 +38,8 @@
   color: white;
   background-color: black;
   border-radius: 5px;
+  margin: 5px;
+  padding: 10px;
   
 }
 
@@ -43,6 +50,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  font-weight: bold;
 
 }
 
@@ -60,6 +68,12 @@
   font-size: 30px;
 }
 
+.bannerimg{
+  width: 100%;
+  height: auto;
+  margin: 0;
+}
+
 
 .listContainer{
   display: flex;
@@ -67,18 +81,76 @@
   justify-content: space-between;
   flex-wrap: wrap;
   margin: 5px;
-  background-color: gray;
   border-radius: 10px;
-  height: 500px;
+  background-color: #eee;
 }
 
 .itemDiv{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  background-color: white;
+  justify-content: flex-start;
+  align-items: flex-start;
+  border-radius: 5px;
   margin: 10px;
+  height: 380px;
+  padding: 5px;
+  box-shadow: 2px 2px 7px 7px rgba(0, 0, 0, 0.2);box-shadow: 0, 7px;
 }
 
 .itemDiv img{
-  height: 100px;
-  width: auto;
+  height: 250px;
+  width: 200px;
+}
+
+.counterDiv{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 3px;
+  width: 190px;
+  height: 20px;
+  border: 1px solid rgb(155, 155, 155);
+  border-radius: 5px;
+}
+
+.counterNum{
+  font-weight: bold;
+}
+
+.counterBtn{
+  font-family: 'Poppins', sans-serif;
+  border: unset;
+  font-size: 30px;
+  background-color: unset;
+  color: rgb(231, 36, 44);
+}
+
+.counterCart{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  padding: 3px;
+  width: 195px;
+  height: 35px;
+  border: 1px solid rgb(231, 36, 44);
+  color: rgb(231, 36, 44);
+  border-radius: 5px;
+  background-color: unset;
+
+}
+
+
+
+footer{
+  background-color: black;
+  color: white;
+  width: 100%;
+  height: 70px;
 }
 
 
@@ -101,6 +173,17 @@
 
 .navlink:hover a{
   color: rgb(231, 36, 44)
+}
+
+.counterBtn:hover{
+  cursor: pointer;
+}
+
+.counterCart:hover{
+  cursor: pointer;
+  color: white;
+  background-color: rgb(231, 36, 44);
+  transition: transform 0.5s ease, color 0.5s ease, background-color 0.5s ease;
 }
 
 /* .navlink a:hover{
