--- a/src/index.css
+++ b/src/index.css
@@ -102,6 +102,16 @@
 
 }
 
+.cartBtns{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.cartBtns button{
+  margin: 5px;
+}
+
 .cartCont{
   display: flex;
   flex-direction: column;
@@ -148,7 +158,7 @@
   align-items: flex-start;
   border-radius: 5px;
   margin: 10px;
-  height: 327px;
+  height: 410px;
   padding: 5px;
   box-shadow: 2px 2px 7px 7px rgba(0, 0, 0, 0.2);
 }
@@ -182,6 +192,7 @@
   color: rgb(231, 36, 44);
 }
 
+
 .counterCart{
   display: flex;
   flex-direction: row;
@@ -193,6 +204,22 @@
   height: 35px;
   border: 1px solid rgb(231, 36, 44);
   color: rgb(231, 36, 44);
+  border-radius: 5px;
+  background-color: unset;
+
+}
+
+.finishCart{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  padding: 3px;
+  width: 195px;
+  height: 35px;
+  border: 1px solid rgb(36, 231, 69);
+  color: rgb(36, 231, 69);
   border-radius: 5px;
   background-color: unset;
 
@@ -284,6 +311,63 @@
   text-decoration: none;
 }
 
+.compradoItem{
+  color: rgb(231, 36, 44);
+  display: flex;
+  text-decoration: none;
+}
+
+.tituCheck{
+  margin-bottom: 15px;
+}
+
+.divCheck{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.divForm{
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  width: 500px;
+  background: #fff;
+  border-radius: 10px;
+  padding: 77px 55px 33px 55px;
+  margin: 25px;
+  box-shadow: 0 7px 4px 7px rgba(0,0,0,.2);
+}
+
+.formCheck{
+  display: flex;
+  flex-direction: column;
+  font-size: 15px;
+}
+
+.inputCheck{
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 30px;
+  
+}
+
+.inputsCheck{
+  color: #555555;
+  line-height: 1.2;
+  display: block;
+  width: 100%;
+  height: 45px;
+  background: transparent;
+  padding: 0 5px;
+  
+}
+
+.resuCheck{
+  display: flex;
+  justify-content: space-around;
+}
+
 
 footer{
   background-color: black;
@@ -325,11 +409,70 @@ footer{
   transition: transform 0.5s ease, color 0.5s ease, background-color 0.5s ease;
 }
 
+.finishCart:hover{
+  cursor: pointer;
+  color: white;
+  background-color: rgb(36, 231, 69);
+  transition: transform 0.5s ease, color 0.5s ease, background-color 0.5s ease;
+}
+
 .btnCart:hover{
   color: rgb(231, 36, 44);
   transition: transform 0.5s ease, color 0.5s ease, color 0.5s ease;
 
 
+}
+
+.formCheck input, textarea{
+  width: 100%;
+  border: 0;
+  padding: 10px 5px;
+  background: white no-repeat;
+
+  background-image: linear-gradient(to bottom, rgb(231, 36, 44), rgb(231, 36, 44)), linear-gradient(to bottom, silver, silver);
+  background-size: 0 2px, 100% 1px;
+  background-position: 50% 100%, 50% 100%;
+  transition: background-size 0.3s cubic-bezier(0.64, 0.09, 0.08, 1);
+  font-family: sans-serif
+
+}
+
+.formCheck input:focus, textarea:focus{
+  background-size: 100% 2px, 100% 1px;
+  outline: none;
+}
+
+input[type="submit"] {
+  border: 1px solid rgb(231, 36, 44);
+  background-color: transparent;
+  color: rgb(231, 36, 44);
+  padding: 20px 60px;
+  font-size: 18px;
+  font-weight: 500;
+  background: transparent;
+  cursor: pointer;
+  display: inline-block;
+  margin-right: 15px;
+  margin-bottom: 30px;
+  border-radius: 3px;
+  text-transform: capitalize;
+
+}
+
+input[type="submit"]:focus {
+  outline: none;
+}
+
+input.btnCheck {
+  background-image: linear-gradient(0, rgb(231, 36, 44), rgb(231, 36, 44));
+  background-size: 0;
+  transition: .8s;
+  background-repeat: no-repeat;
+}
+
+input.btnCheck:hover {
+  background-size: 100%;
+  color: #fff;
 }
 
 /* .navlink a:hover{
