--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,6 @@ a{
   text-decoration: none;
 }
 
-
-
 .headers{
   display: flex;
   flex-direction: column;
@@ -41,7 +39,6 @@ a{
 .cartIcon{
   text-decoration: none;
   color: black;
-
 }
 
 .nave{
@@ -50,7 +47,6 @@ a{
   border-radius: 5px;
   margin: 5px;
   padding: 10px;
-  
 }
 
 .nave ul{
@@ -61,7 +57,6 @@ a{
   align-items: center;
   justify-content: space-between;
   font-weight: bold;
-
 }
 
 .nave ul li{
@@ -91,7 +86,7 @@ a{
   justify-content: center;
   margin: 20px;
   padding: 30px;
-  
+
 }
 
 .cartItem{
@@ -103,7 +98,6 @@ a{
   margin: 10px;
   padding: 5px;
   box-shadow: 2px 2px 7px 7px rgba(0, 0, 0, 0.2)
-
 }
 
 .cartBtns{
@@ -120,6 +114,7 @@ a{
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  width: 350px;
 }
 
 .cartItem h3{
@@ -162,7 +157,6 @@ a{
   align-items: flex-start;
   border-radius: 5px;
   margin: 10px;
-  height: 410px;
   padding: 5px;
   box-shadow: 2px 2px 7px 7px rgba(0, 0, 0, 0.2);
 }
@@ -226,7 +220,6 @@ a{
   color: rgb(36, 231, 69);
   border-radius: 5px;
   background-color: unset;
-
 }
 
 .itemDetails{
@@ -343,7 +336,7 @@ a{
   box-shadow: 0 7px 4px 7px rgba(0,0,0,.2);
 }
 
-.divFormB{
+.divFormA{
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -361,7 +354,6 @@ a{
   display: flex;
   flex-direction: column;
   margin-bottom: 30px;
-  
 }
 
 .inputsCheck{
@@ -372,7 +364,6 @@ a{
   height: 45px;
   background: transparent;
   padding: 0 5px;
-  
 }
 
 .resuCheck{
@@ -380,17 +371,28 @@ a{
   justify-content: space-around;
 }
 
-
 footer{
   background-color: black;
   color: white;
   width: 100%;
   height: 70px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+
+footer a label{
+  color: rgb(231, 36, 44);
 }
 
 
 /* Animaciones */
 
+
+footer a label:hover{
+  cursor: pointer;
+}
 
 .navlink a{
 	color: white;
@@ -431,8 +433,6 @@ footer{
 .btnCart:hover{
   color: rgb(231, 36, 44);
   transition: transform 0.5s ease, color 0.5s ease, color 0.5s ease;
-
-
 }
 
 .formCheck input, textarea{
@@ -440,13 +440,11 @@ footer{
   border: 0;
   padding: 10px 5px;
   background: white no-repeat;
-
   background-image: linear-gradient(to bottom, rgb(231, 36, 44), rgb(231, 36, 44)), linear-gradient(to bottom, silver, silver);
   background-size: 0 2px, 100% 1px;
   background-position: 50% 100%, 50% 100%;
   transition: background-size 0.3s cubic-bezier(0.64, 0.09, 0.08, 1);
   font-family: sans-serif
-
 }
 
 .formCheck input:focus, textarea:focus{
@@ -487,9 +485,91 @@ input.btnCheck:hover {
   color: #fff;
 }
 
-/* .navlink a:hover{
-  color: blue;
-} */
+.swal-button{
+  background-color: rgb(231, 36, 44);
+}
+
+.swal-button:not([disabled]):hover{
+  background-color: white;
+  color: rgb(231, 36, 44);
+}
+
+@media (max-width: 425px){
+
+  .bannerimg{
+    display: none;
+  }
+
+  .banner img{
+    height: 40px;
+  }
+
+  .itemDetail{
+    flex-direction: column;
+  }
+
+
+  .cartItem{
+    width:  335px;
+  }
+
+  .cartBtns{
+    flex-direction: column;
+  }
+
+  .divForm{
+    width: 300px;
+  }
+
+  .resuCheck{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 5px;
+  }
+
+}
+
+@media (max-width: 375px){
+
+  .itemDetail{
+    width: 300px;
+  }
+
+  .divForm{
+    width: 240px;
+  }
+
+  .cartCont{
+    width: 200px;
+  }
+}
+
+@media (max-width: 320px){
+
+  .detailPage{
+    padding: 3px;
+  }
+
+  .itemDetail{
+    width: 250;
+    padding: 5px;
+  }
+
+  .itemDetail img{
+    width: 255px;
+  }
+
+  .cartItem{
+    flex-direction: column;
+    width: 210px;
+  }
+
+  .cartItem h3{
+    margin-bottom: 20px;
+  }
+
+}
 
 
 
